--- a/episodes/importing-and-working-with-datasets.Rmd
+++ b/episodes/importing-and-working-with-datasets.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Introduction'
+title: 'Importing and working with datasets'
 teaching: 10
 exercises: 2
 ---
@@ -108,3 +108,4 @@ Cool, right?
 - Run `sandpaper::build_lesson()` to preview your lesson locally
 
 ::::::::::::::::::::::::::::::::::::::::::::::::
+
